# pynixreq

./: .gitignore  README.md  setup.cfg  setup.nix  setup.py
pynixreq/: compile_requirements.py  data.py  exceptions.py  fetch.py  main.py  nix.py  pypi.py  pypiparser.py  requirements.py
pynixreq/nix/: package.nix  package.py  requirements.py
