[metadata]
name=pynixreq
url=https://github.com/takeda/pynixreq
description=Python-Nix integration
;long_description=file:README.rst
license=BSD
author=Derek Kulinski
author_email=d@kulinski.us
platforms=
    POSIX
classifiers=
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: Other/Proprietary License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe=true
setup_requires=
    setuptools_scm
install_requires=
    aiohttp ~= 3.3.2
    packaging ~= 17.1
packages=find:

[options.entry_points]
console_scripts=
    pynixreq=pynixreq.main:cli
