[metadata]
name=pynixreq
url=https://github.com/takeda/pynixreq
description=Python-Nix integration
;long_description=file:README.rst
license=BSD
author=Derek Kulinski
author_email=d@kulinski.us
platforms=
    POSIX
classifiers=
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: Other/Proprietary License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe=true
setup_requires=
    setuptools_scm
install_requires=
    aiohttp ~= 3.3.2
    packaging ~= 17.1
packages=find:

[options.entry_points]
console_scripts=
    pynixreq=pynixreq.main:cli

[mypy]
;disallow_any_unimported=true
;disallow_any_expr=true
;disallow_any_decorated=true
;disallow_any_explicit=true
;disallow_any_generics=true
;disallow_subclassing_any=true

;disallow_untyped_calls=true
;disallow_untyped_defs=true
;disallow_incomplete_defs=true
;check_untyped_defs=true
;disallow_untyped_decorators=true

;no_implicit_optional=true

;warn_unused_ignores=true
;warn_return_any=true

;warn_redundant_casts=true
;warn_unused_configs=true

; Modules which don't contain type information
; (please list in alphabetical order)
[mypy-aiohttp,packaging.*,setuptools.config]
ignore_missing_imports=true
